2011-02-23 Sasa Bojanic <sasaboy@together.at>
   # The build.debug property removed from build.properties file, new build target "debug" introduced 
     to build TWE JAR files with DEBUG information in the classes
   # The project distribution now also contains debug folder with TWE JAR files that include DEBUG information     

2011-02-22 Sasa Bojanic <sasaboy@together.at>
   # Added "silent" installation possibility

2011-02-20 Sasa Bojanic <sasaboy@together.at>
   # Updated screenshots

2011-02-18 Sasa Bojanic <sasaboy@together.at>
   # Ant libraries upgraded to version 1.8.2 (removed ant-nodeps.jar)
   # Xerces library upgraded to version 2.11.0
   # Commons IO library upgraded to version 2.0.1
   # XML Commons library upgraded to version 1.4_01
   # XML Graphics Commons library upgraded to version 1.4
   # FOP library upgraded to version 1.0
   # iText library upgraded to version 5.0.6
   # Fixed "Save as PDF" action bug
   
2011-02-15 Sasa Bojanic <sasaboy@together.at>
   # jxpdl.jar updated to SVN version 1.0-1 SVNR35
   # Fix for migrating from XPDL 1: Proper handling of Start/End event connections when migrating 
     from XPDL 1 created by older version of JaWE (the case of circular transitions)

###### TWE 4.0-1 RELEASED ######

2011-02-09 Sasa Bojanic <sasaboy@together.at>
   # Now supporting XPDL 2.1 and BPMN
   # Using jxpdl.jar file, the output of Together XPDL Model(TXM)/jXPDL project. 
     This contains the XPDL 2 model classes that were previously the part of 
     Enhydra Shark (Together Workflow Server) project
   # Automatic migration of XPDL 1.0 files into XPDL 2.1 files:
      - Inserting pools and lanes for each workflow process definition
      - Migrating Ids for activities and activity sets - must be unique on the package level (done by TXM)
      - Migrating Tool activities into Task-Application activities, if there are more than one 
        tool for the activity - new activities get created and connected sequentially (done by TXM)